Fixed #456 - report page: checbox text weird line break on small

--- a/src/main/resources/static/css/reports.css
+++ b/src/main/resources/static/css/reports.css
@@ -5,6 +5,7 @@
 
 .report-checkbox-container {
     margin-bottom: 0.5rem;
+    display: inline-table;
 }
 
 #columnNames {
